--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nod app"
+    "start": "nod app.js"
   },
   "keywords": [],
   "author": "",
