--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,7 +3,11 @@
   "builds": [
     {
       "src": "app.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "memory": 512,
+        "maxDuration": 10
+      }
     }
   ],
   "routes": [
