--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0"
   },
