--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
     "postcss": "^8.5.3",
