--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
     "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
     "postcss": "^8.5.3",
@@ -23,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-spinners": "^0.17.0",
+    "react-to-print": "^3.1.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0"
   },
