--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.6.0",
     "react-spinners": "^0.17.0",
     "react-to-print": "^3.1.0",
+    "recharts": "^2.15.4",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0"
   },
