--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.5.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
     "postcss": "^8.5.3",
@@ -23,6 +24,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.6.0",
     "react-spinners": "^0.17.0",
     "react-to-print": "^3.1.0",
